--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "cudsm",
+  "name": "sm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^3.39.0",
+    "@blueprintjs/table": "^3.8.23",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "bootstrap": "^4.6.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "diff2html": "^3.2.0",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-grid-system": "^7.1.1",
     "react-html-parser": "^2.0.2",
     "react-scripts": "4.0.2",
     "tauri": "^0.14.1",
@@ -47,7 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@types/es6-shim": "^0.31.41",
     "@types/lodash": "^4.14.168",
+    "@types/pure-render-decorator": "^0.2.28",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-html-parser": "^2.0.1",
     "prettier": "^2.2.1"
   }
