--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "cudsm"
+name = "sm"
 version = "0.1.0"
 description = "A Tauri App"
 authors = [ "you" ]
 license = ""
 repository = ""
-default-run = "cudsm"
+default-run = "sm"
 edition = "2018"
 build = "src/build.rs"
 
@@ -18,6 +18,7 @@ notify = "5.0.0-pre.6"
 diesel = { version = "1.4.5", features = [ "sqlite", "r2d2" ] }
 diffy = "0.2.1"
 dotenv = "0.15.0"
+bus = "2.2.3"
 
 [target."cfg(windows)".build-dependencies]
 winres = "0.1"
@@ -27,5 +28,5 @@ embedded-server = [ "tauri/embedded-server" ]
 no-server = [ "tauri/no-server" ]
 
 [[bin]]
-name = "cudsm"
+name = "sm"
 path = "src/main.rs"
