--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "diff2html": "^3.2.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-system": "^7.1.1",
